# conda-config

./: .pre-commit-config.yaml  README.md  environment.yaml  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
conda_config/: condarc.py  constants.py  context.py  errors.py  exceptions.py  sources.py  system.py
tests/: conftest.py  test_context.py  test_sources.py
